feat: Replace Aether branding with Mat Ops in extension UI

--- a/matops-extension/extension-src/popup.html
+++ b/matops-extension/extension-src/popup.html
@@ -177,10 +177,10 @@
       📊 Extract Stats from Page
     </button>
     <button class="btn-sync" id="sync-btn">
-      🔄 Sync to Aether
+      🔄 Sync to Platform
     </button>
     <button class="btn-view" id="view-btn">
-      👁️ View in Aether
+      👁️ View in Platform
     </button>
     <button class="btn-clear" id="clear-btn">
       🗑️ Clear Cached Data
