--- a/matops-extension/extension-src/sidebar.html
+++ b/matops-extension/extension-src/sidebar.html
@@ -338,7 +338,7 @@
   <div class="header">
     <div class="header-content">
       <div class="logo">
-        <img src="icons/aether-48.png" alt="Aether">
+        <img src="icons/matops-icon-48.png" alt="Mat Ops">
         <span class="title">Mat Ops</span>
       </div>
       <button id="clearButton" class="clear-btn">🗑️ Clear</button>
